[gd_scene load_steps=6 format=3 uid="uid://cfqm0gn5b2ko4"]

[ext_resource type="Script" uid="uid://d1jkkkxa30b4i" path="res://Non-Entity/Kitchens/KitchenNodeScript.gd" id="1_62ugp"]
[ext_resource type="FontFile" uid="uid://d1pae6xy5aw31" path="res://External/Fonts/JetBrainsMono[wght].ttf" id="2_1dv3n"]

[sub_resource type="BoxShape3D" id="BoxShape3D_hd7rm"]

[sub_resource type="BoxMesh" id="BoxMesh_iwj1n"]

[sub_resource type="BoxShape3D" id="BoxShape3D_62ugp"]
size = Vector3(0.7, 0.185, 0.7)

[node name="TrashBin" type="RigidBody3D"]
collision_layer = 8
collision_mask = 11
mass = 10.0
script = ExtResource("1_62ugp")
id = "TrashBin"

[node name="Collision" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_hd7rm")

[node name="Mesh" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_iwj1n")

[node name="DebugLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.67, 0)
billboard = 1
text = "DebugLabel"
font = ExtResource("2_1dv3n")

[node name="InteractPoint" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="InteractShape" type="CollisionShape3D" parent="InteractPoint"]
shape = SubResource("BoxShape3D_62ugp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
